[gd_scene load_steps=21 format=3 uid="uid://cc54t4tocndg7"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_kacb1"]
[ext_resource type="Texture2D" uid="uid://dpahml8n3wh7r" path="res://sprites/player.png" id="5_hq2vo"]
[ext_resource type="Texture2D" uid="uid://dt8gpxw27jtkq" path="res://sprites/light.png" id="6_uj0ay"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3bkm3"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lx0to"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm22y"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n65ia"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hgqa"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxh8"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehm6u"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4snub"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i56bm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx0to")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n65ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hgqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekxh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehm6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4snub")
}],
"loop": false,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7xl7m"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1eta"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tovno"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov83o"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_utoos"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn6as"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab44i"]
atlas = ExtResource("5_hq2vo")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_goejg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xl7m")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1eta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tovno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov83o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utoos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn6as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab44i")
}],
"loop": false,
"name": &"walk",
"speed": 12.0
}]

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_kacb1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_3bkm3")

[node name="TopPart" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_i56bm")
animation = &"walk"
autoplay = "idle"

[node name="BottomPart" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_goejg")
animation = &"idle"
autoplay = "idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
texture = ExtResource("6_uj0ay")

[node name="NavUpdateTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 16.0
target_desired_distance = 24.0

[connection signal="timeout" from="NavUpdateTimer" to="." method="_on_nav_update_timer_timeout"]
